--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,15 +5,21 @@
     "es2021": true,
     "jest": true
   },
-  "extends": ["eslint:recommended"],
-  "plugins": [],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
   },
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "no-useless-escape": "warn",
-    "no-case-declarations": "warn"
+    "no-case-declarations": "warn",
+    "@typescript-eslint/no-explicit-any": "warn"
   }
 }
