feat: release version 0.2.0 with AI-powered analysis and enhanced reporting
- Introduced AI-powered critical findings analysis for dependency updates, including automatic detection of breaking changes and security issues.
- Added rich markdown report generation with code examples and detailed migration steps.
- Implemented an interactive AI setup wizard for easier configuration.
- Enhanced CLI with new options for AI summary and improved error handling.
- Updated configuration management to support multiple AI providers and models.
- Fixed various issues related to release notes format and AI workflow failures.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "patchworks-cli",
-  "version": "0.1.0",
-  "description": "A CLI tool to manage dependency updates by semantic versioning, breaking change detection, and batch selection for efficient prioritization",
+  "version": "0.2.0",
+  "description": "A CLI tool to manage dependency updates by semantic versioning, breaking change detection, with batch selection and AI-powered analysis for efficient prioritization",
   "main": "dist/src/cli/index.js",
   "bin": {
     "patchworks": "./dist/bin/patchworks.js"
