--- a/patchworks-config.example.json
+++ b/patchworks-config.example.json
@@ -13,8 +13,8 @@
     "enabled": false,
     "focusAreas": ["breaking", "security", "migration"],
     "provider": "auto",
-    "model": "claude-3-5-sonnet-20241022",
-    "anthropicApiKey": "",
-    "openaiApiKey": ""
+    "anthropicModel": "claude-3-5-sonnet-20241022",
+    "openaiModel": "gpt-4o",
+    "geminiModel": "gemini-2.0-flash-001"
   }
 }
